# stb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml  qdrant-config.yml
bible/: eng-web_002_GEN_01_read.txt  eng-web_003_EXO_01_read.txt  eng-web_003_EXO_13_read.txt  eng-web_004_LEV_01_read.txt  eng-web_005_NUM_01_read.txt  eng-web_005_NUM_02_read.txt  eng-web_006_DEU_01_read.txt  eng-web_007_JOS_01_read.txt  eng-web_008_JDG_01_read.txt  eng-web_009_RUT_01_read.txt  eng-web_010_1SA_01_read.txt  eng-web_011_2SA_01_read.txt  eng-web_012_1KI_01_read.txt  eng-web_013_2KI_01_read.txt  eng-web_013_2KI_06_read.txt  eng-web_013_2KI_22_read.txt  eng-web_014_1CH_01_read.txt  eng-web_015_2CH_01_read.txt  eng-web_015_2CH_03_read.txt  eng-web_016_EZR_01_read.txt  eng-web_017_NEH_01_read.txt  eng-web_018_EST_01_read.txt  eng-web_019_JOB_01_read.txt  eng-web_020_PSA_001_read.txt  eng-web_021_PRO_01_read.txt  eng-web_022_ECC_01_read.txt  eng-web_023_SNG_01_read.txt  eng-web_024_ISA_01_read.txt  eng-web_025_JER_01_read.txt  eng-web_026_LAM_01_read.txt  eng-web_027_EZK_01_read.txt  eng-web_028_DAN_01_read.txt  eng-web_029_HOS_01_read.txt  eng-web_030_JOL_01_read.txt  eng-web_031_AMO_01_read.txt  eng-web_032_OBA_01_read.txt  eng-web_033_JON_01_read.txt  eng-web_034_MIC_01_read.txt  eng-web_035_NAM_01_read.txt  eng-web_036_HAB_01_read.txt  (+46 more)
embedder/: Dockerfile  pyproject.toml  run_server
embedder/embedder/: embedding_server.py  init_vector_search_index.py
embedder/tests/: test_embedder.py
qdrant/: restore.sh
src/: args.rs  candle.rs  db.rs  http.rs  init.rs  main.rs  prelude.rs  search.rs  torch.rs
src/http/: cors.rs
src/model/: book.rs  embedding.rs  mod.rs  quote.rs  verse.rs
static/css/: main.css
static/js/: main.js
static/sass/: main.scss
templates/: base.html.tera  chapter.html.tera  index.html.tera
web/: package-lock.json  package.json
web/src/routes/: +layout.svelte  Header.svelte  styles.css
web/src/routes/stb/: +page.svelte  +page.ts  store.ts
web/src/routes/stb/[book_slug]/[chapter]/: +page.svelte  +page.ts  store.ts
web/src/routes/sverdle/: +page.svelte
