[package]
name = "stb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
sass-rocket-fairing = "0.2"
anyhow = "1"
clap = { version = "3", features = ["derive"] }
qdrant-client = "0.10.1"
tokio = { version = "1", features = ["full"] }
glob = "0.3"
rusqlite = { version = "0.28", features = ["bundled"] }
regex = "1"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tera = { version = "1", default-features = false }
lazy_static = "1"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
