[package]
name = "stb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
glob = "0.3"
regex = "1"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-bert = { version = "0.21", optional = true }
parking_lot = "0.12"
crossbeam-channel = "0.5"
once_cell = "1"

axum = "0.6"

candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }
tokenizers = "0.15"
hf-hub = "0.3.2"
deadpool-postgres = "0.11"

[features]
default = []
rust_bert = ["rust-bert"]

# [target.x86_64-unknown-linux-gnu]
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]
