[tool.poetry]
name = "embedder"
version = "0.1.0"
description = ""
authors = ["Dakota Brink <git@kota.is>"]

[tool.poetry.dependencies]
python = "^3.8"
sentence-transformers = "^2.2.2"
fastapi = "^0.78.0"
numpy = "^1.23.0"
Fiona = "^1.8.21"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
